Fix T71: Can't see the whole list in the chart dropdown widget on Firefox

--- a/grails-app/assets/stylesheets/app/layout.less
+++ b/grails-app/assets/stylesheets/app/layout.less
@@ -800,11 +800,9 @@ table {
       }
     }
   }
-  .widget-feed {
-    .panel-body {
-      max-height: 350px;
-      overflow-y: auto;
-    }
+  .widget-feed .panel-body.widget-content  {
+    max-height: 350px;
+    overflow-y: auto;
   }
 
   .widget-quickProjects {
